added split chunk plungin

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div id="slide-show"></div>
-        <script src="http://localhost:3002/bundle.js"></script>
+        <script src="http://localhost:3002/vendor.bundle.js"></script>
+        <script src="http://localhost:3002/main.bundle.js"></script>
         <div id="reviews"></div>
-        <script src="http://localhost:3001/bundle.js"></script>
+        <script src="http://localhost:3001/main.bundle.js"></script>
     </body>
 </html>
