--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>GROUPON</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <div id="slide-show"></div>
+        <h1>ITEM NAME</h1>
+        <div class="picture-shipping">
+            <div id="slide-show"></div>
+            <img id="shipping-option" src="shipping-option.png" alt="shipping-option">
+        </div>
+        <div id="reviews"></div>
         <script src="http://localhost:3002/vendor.bundle.js"></script>
         <script src="http://localhost:3002/main.bundle.js"></script>
-        <div id="reviews"></div>
         <script src="http://localhost:3001/main.bundle.js"></script>
     </body>
 </html>
