added minor css to position placeholder images

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <body>
         <h1>ITEM NAME</h1>
         <div class="picture-shipping">
-            <div id="slide-show"></div>
+            <div>
+                <div id="slide-show"></div>
+                <img id="product-detail" src="product-detail.png" alt="product-detail">
+            </div>
             <img id="shipping-option" src="shipping-option.png" alt="shipping-option">
         </div>
         <div id="reviews"></div>
