--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,12 @@
             </div>
             <img id="shipping-option" src="shipping-option.png" alt="shipping-option">
         </div>
+        <img id="customer-also-bought" src="customer-also-bought.png" alt="customer-also-bought">
         <div id="reviews"></div>
-        <script src="http://localhost:3002/vendor.bundle.js"></script>
-        <script src="http://localhost:3002/main.bundle.js"></script>
-        <script src="http://localhost:3001/main.bundle.js"></script>
+        <script src="http://ec2-18-236-153-219.us-west-2.compute.amazonaws.com:3002/main.bundle.js"></script>
+        <script src="http://ec2-18-236-153-219.us-west-2.compute.amazonaws.com:3002/vendor.bundle.js"></script>
+        <script src="http://ec2-34-217-89-110.us-west-2.compute.amazonaws.com:3001/main.bundle.js"></script>
+        <script src="http://ec2-34-217-89-110.us-west-2.compute.amazonaws.com:3001/vendor.bundle.js"></script>
+
     </body>
 </html>
