added end points for bundles to request from each service

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,9 @@
         </div>
         <img id="customer-also-bought" src="customer-also-bought.png" alt="customer-also-bought">
         <div id="reviews"></div>
-        <script src="http://ec2-18-236-153-219.us-west-2.compute.amazonaws.com:3002/main.bundle.js"></script>
-        <script src="http://ec2-18-236-153-219.us-west-2.compute.amazonaws.com:3002/vendor.bundle.js"></script>
-        <script src="http://ec2-34-217-89-110.us-west-2.compute.amazonaws.com:3001/main.bundle.js"></script>
-        <script src="http://ec2-34-217-89-110.us-west-2.compute.amazonaws.com:3001/vendor.bundle.js"></script>
-
+        <!-- <script src="http://ec2-34-217-89-110.us-west-2.compute.amazonaws.com:3001/vendor.bundle.js"></script> -->
+        <script src="/reviews/main.bundle.js"></script>
+        <script src="/slide-show/vendor.bundle.js"></script>
+        <script src="/slide-show/main.bundle.js"></script>
     </body>
 </html>
